--- a/cron.yaml
+++ b/cron.yaml
@@ -1,4 +1,4 @@
 cron:
-- description: call webtest
-  url: /basic_web_test
-  schedule: every 1 hours
+- description: basic webtest
+  url: /web_test
+  schedule: every 30 minutes
