--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: watchman
+application: watchman-161109
 runtime: python27
 version: 1
 api_version: 1
@@ -7,7 +7,8 @@ module: default
 
 handlers:
 - url: /.*
-  script: application.app
-- url: /.*
+  script: application_sample.app
+
+- url: /worker/.*
   script: worker.app
   login: admin
